# openbeam

./: .gitignore  .gitmodules  .travis.sh  .travis.yml  CMakeLists.txt  Doxyfile  FindCairo.cmake  OpenBeamConfig.cmake.in  README.md  compile.html  finite_elements.html  genindex.html  index.html  objects.inv  script_deploy_web.cmake  search.html  searchindex.js  structure-definition-format.html
_sources/: compile.rst.txt  finite_elements.rst.txt  index.rst.txt
apps/: CMakeLists.txt
apps/OpenBeamStudio/: CMakeLists.txt  OpenBeamStudio.pro  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openbeamstudio.qrc
apps/ob-solve/: CMakeLists.txt  ob-solve_main.cpp
apps/web-ob-solve/: AppOpenBeam.cpp  AppOpenBeam.h  CMakeLists.txt
data/: beam_profiles.txt
doc/: compile.html  index.html
docs/: Doxyfile  Makefile  conf.py  finite_elements.rst  index.rst  requirements.txt  structure-definition-format.rst
docs/_templates/: layout.html
doxygen/html/: CBaseElementBeam_8h_source.html  CElementBeam__2D__AA_8h_source.html  CElementBeam__2D__AR_8h_source.html  CElementBeam__2D__RA_8h_source.html  CElementBeam__2D__RD_8h_source.html  CElementBeam__2D__RR_8h_source.html  CElementSpringDXDYRZ_8h_source.html  CElementSpringXYZ_8h_source.html  CElementSpringXY_8h_source.html  CElementSpring_8h_source.html  CElementTorsionSpring_8h_source.html  CElement_8h_source.html  CFiniteElementProblem_8h_source.html  CStructureProblem_8h_source.html  DrawStructureOptions_8h_source.html  ExpressionEvaluator_8h_source.html  annotated.html  classes.html  classopenbeam_1_1CBaseElementBeam-members.html  classopenbeam_1_1CBaseElementBeam.html  classopenbeam_1_1CBaseElementBeam__coll__graph.map  classopenbeam_1_1CBaseElementBeam__coll__graph.md5  classopenbeam_1_1CBaseElementBeam__inherit__graph.map  classopenbeam_1_1CBaseElementBeam__inherit__graph.md5  classopenbeam_1_1CElement-members.html  classopenbeam_1_1CElement.html  classopenbeam_1_1CElementBeam__2D__AA-members.html  classopenbeam_1_1CElementBeam__2D__AA.html  classopenbeam_1_1CElementBeam__2D__AA__coll__graph.map  classopenbeam_1_1CElementBeam__2D__AA__coll__graph.md5  classopenbeam_1_1CElementBeam__2D__AA__inherit__graph.map  classopenbeam_1_1CElementBeam__2D__AA__inherit__graph.md5  classopenbeam_1_1CElementBeam__2D__AR-members.html  classopenbeam_1_1CElementBeam__2D__AR.html  classopenbeam_1_1CElementBeam__2D__AR__coll__graph.map  classopenbeam_1_1CElementBeam__2D__AR__coll__graph.md5  classopenbeam_1_1CElementBeam__2D__AR__inherit__graph.map  classopenbeam_1_1CElementBeam__2D__AR__inherit__graph.md5  classopenbeam_1_1CElementBeam__2D__RA-members.html  classopenbeam_1_1CElementBeam__2D__RA.html  (+196 more)
examples-code/: CMakeLists.txt  example1.cpp
examples-structures/: demo-list.json  demo1.txt  demo1.yaml  demo1_tilded_plane.txt  demo1_tilded_plane.yaml  demo2.txt  demo2.yaml  demo2_bis.yaml  demo3.txt  demo3.yaml  demo3_frame.yaml  demo3_frame_tilted_slider.yaml  demo4.txt  demo4_frame_slider.yaml  demo5.txt  demo_cm9b_full.txt  demo_cm9b_half_sym.txt  ex2021_01.yaml  model1.txt  model2.txt  model3.txt  model4.txt  pr1_05.txt
include/openbeam/: CBaseElementBeam.h  CElement.h  CElementBeam_2D_AA.h  CElementBeam_2D_AR.h  CElementBeam_2D_RA.h  CElementBeam_2D_RD.h  CElementBeam_2D_RR.h  CElementSpring.h  CElementSpringXYZ.h  CElementTorsionSpring.h  CFiniteElementProblem.h  CTicTac.h  loads.h  (+8 more)
internationalization/: lang_en.cpp  lang_es.cpp  lang_strings.h  languages.h  localization.cpp  localization.h
js/: main.js  web-ob-solve.html  web-ob-solve.js  web-ob-solve.wasm
libopenbeam/: CMakeLists.txt
libopenbeam/include/openbeam/: CBaseElementBeam.h  CElement.h  CElementBeam_2D_AA.h  CElementBeam_2D_AR.h  CElementBeam_2D_RA.h  CElementBeam_2D_RD.h  CElementBeam_2D_RR.h  CElementSpring.h  CElementSpringDXDYRZ.h  CElementSpringXY.h  CElementSpringXYZ.h  CElementTorsionSpring.h  CFiniteElementProblem.h  CStructureProblem.h  DrawStructureOptions.h  TDrawStructureOptions.h  config.h  elements.h  loads.h  openbeam.h  openbeam_version.h  print_html_matrix.h  types.h
libopenbeam/internationalization/: lang_en.cpp  lang_strings.h  languages.h  localization.cpp
libopenbeam/src/: CBaseElementBeam.cpp  CElement.cpp  CElementBeam_2D_AA.cpp  CElementBeam_2D_AR.cpp  CElementBeam_2D_RA.cpp  CElementBeam_2D_RD.cpp  CElementBeam_2D_RR.cpp  CElementSpring.cpp  CElementSpringDXDYRZ.cpp  CElementSpringXY.cpp  CElementSpringXYZ.cpp  CElementTorsionSpring.cpp  CFiniteElementProblem.cpp  CFiniteElementProblem_assemble.cpp  CFiniteElementProblem_getVisualization.cpp  CFiniteElementProblem_parse_file.cpp  CFiniteElementProblem_postproc_stress.cpp  CFiniteElementProblem_save_as_svg.cpp  CFiniteElementProblem_solver_static.cpp  CLoadConcentratedForce.cpp  CLoadConstTemperature.cpp  CLoadDistributedTriangular.cpp  CLoadDistributedUniform.cpp  CStructureProblem.cpp  CStructureProblem_mesh.cpp  CTextFileLinesParser.h  DrawStructureOptions.cpp  ExpressionEvaluator.cpp  ExpressionEvaluator.h  globals.cpp  internals.cpp  internals.h  loads.cpp  types.cpp
ob-solver-simple/: index.html
src/: CBaseElementBeam.cpp  CElement.cpp  CElementBeam_2D_AA.cpp  CElementBeam_2D_AR.cpp  CElementBeam_2D_RA.cpp  CElementBeam_2D_RD.cpp  CElementBeam_2D_RR.cpp  CElementSpring.cpp  CElementSpringXYZ.cpp  CElementTorsionSpring.cpp  CFiniteElementProblem.cpp  CFiniteElementProblem_assemble.cpp  CFiniteElementProblem_parse_file.cpp  CFiniteElementProblem_postproc_stress.cpp  CFiniteElementProblem_save_as_svg.cpp  CFiniteElementProblem_solver_static.cpp  CLoadConcentratedForce.cpp  CLoadConstTemperature.cpp  CLoadDistributedTriangular.cpp  CLoadDistributedUniform.cpp  CMakeLists.txt  CStructureProblem.cpp  CStructureProblem_mesh.cpp  CTextFileLinesParser.cpp  CTextFileLinesParser.h  CTicTac.cpp  CTimeLogger.cpp  ExpressionEvaluator.cpp  ExpressionEvaluator.h  internals.cpp  internals.h  loads.cpp  types.cpp
web-apps/: CMakeLists.txt  ob-solver.html
web-apps/web-ob-solve/: AppOpenBeam.cpp  AppOpenBeam.h  CMakeLists.txt  main.cpp
web-frontend/: index.html
(+73 files in other folders)
